--- a/package.json
+++ b/package.json
@@ -8,17 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "date-fns": "^2.9.0",
+    "firebase": "^7.8.1",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.1.3",
+    "vue-sweetalert2": "^3.0.1",
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^4.7.95",
+    "@mdi/js": "^4.7.95",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
